Make sure text on bonuses is visible on player board

--- a/ht-hs/ui/style.css
+++ b/ht-hs/ui/style.css
@@ -192,6 +192,7 @@ body {
   left: 0px;
   top: 0px;
   background-color: white;
+  color: black;
   border: 1px solid black;
   text-align: center;
   padding: 0.5em;
